--- a/style.css
+++ b/style.css
@@ -3,4 +3,6 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
