--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/background.jpg');
+    background-image: url('images/fondo.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
