--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://github.com/glruin/fallen.angel/blob/main/images/fondo.png?raw=true');
+    background-image: url('fondo.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
