--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
 }
