--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('fondo.png');
+    background-image: url('https://i.pinimg.com/1200x/cc/c0/2a/ccc02ac95fa7de544809d07ee1453da7.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
